# bridge

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  bridge.cpp  bridge.hpp  conanfile.txt  hands.hpp  test.cpp  test_bridge.cpp
